Fix header url and coin page alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@ body {
 
 main {
   display: flex;
+  justify-content: center;
 }
 
 a {
